force-app/main/default/objects/SA_Detail_2__c/SA_Detail_2__c.object-meta.xml
<CustomObject>
    <label>SA Detail_2</label>
    <nameField>
        <label>SA Detail_2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SA Details_2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>