force-app/main/default/objects/SA_Detail_2__c/fields/Customer_Handled_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Handled_2__c</fullName>
    <label>Customer Handled_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>