force-app/main/default/objects/SA_Detail_2__c/fields/Date_of_Joining_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining_2__c</fullName>
    <label>Date of Joining_2</label>
    <type>Date</type>
</CustomField>