force-app/main/default/objects/SA_Detail_2__c/fields/Experience_2__c.field-meta.xml
<CustomField>
    <fullName>Experience_2__c</fullName>
    <label>Experience_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>