force-app/main/default/objects/SA_Detail_2__c/fields/Location_2__c.field-meta.xml
<CustomField>
    <fullName>Location_2__c</fullName>
    <label>Location_2</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>