force-app/main/default/objects/SA_Detail_2__c/fields/Name_2__c.field-meta.xml
<CustomField>
    <fullName>Name_2__c</fullName>
    <label>Name_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>