force-app/main/default/objects/SA_Detail_2__c/fields/SA_Details_2__c.field-meta.xml
<CustomField>
    <fullName>SA_Details_2__c</fullName>
    <displayFormat>SAD-{0000}</displayFormat>
    <label>SA Details_2</label>
    <type>AutoNumber</type>
</CustomField>