force-app/main/default/objects/SA_Detail_2__c/fields/Specilization_2__c.field-meta.xml
<CustomField>
    <fullName>Specilization_2__c</fullName>
    <label>Specilization_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>