force-app/main/default/objects/SA_Detail_2__c/fields/Supervisor_2__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_2__c</fullName>
    <label>Supervisor_2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SA Details_2</relationshipLabel>
    <relationshipName>SA_Details_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>